--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "SHADAI GROUP", email = "jaisir@shadai.ai"}
 ]
 requires-python = ">=3.12"
+readme = "README.md"
 dependencies = [
     "boto3==1.35.36",
     "botocore==1.35.36",
@@ -16,6 +17,7 @@ dependencies = [
     "setuptools==75.3.0",
     "tqdm==4.67.1",
     "rich==13.9.4",
+    "ruff==0.8.4",
 ]
 
 [project.optional-dependencies]
