--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -26,12 +26,13 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Build release distributions
+      - name: Install build dependencies
         run: |
-          # NOTE: put your own distribution build steps here.
           python -m pip install --upgrade pip
           python -m pip install setuptools wheel
-          python setup.py sdist bdist_wheel
+
+      - name: Build release distributions
+        run: python setup.py sdist bdist_wheel
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
