--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install setuptools wheel
+          python -m pip install build
 
       - name: Build release distributions
-        run: python setup.py sdist bdist_wheel
+        run: python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
