--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "shadai"
 version = "0.1.4"
-description = "SHADAI Intelligence Client"
+description = "SHADAI Client"
 authors = [
     {name = "SHADAI GROUP", email = "jaisir@shadai.ai"}
 ]
@@ -30,7 +30,7 @@ requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["intelligence"]
+packages = ["shadai"]
 
 [tool.black]
 line-length = 100
