--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "tqdm==4.67.1",
     "rich==13.9.4",
     "ruff==0.8.4",
+    "dill==0.4.0"
 ]
 
 [project.optional-dependencies]
