--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "langchain-core==1.0.0a8",
     "python-dotenv==1.1.1",
+    "streamlit>=1.28.0",
 ]
 
 [project.optional-dependencies]
